[package]
name = "advent_of_code_2022"
version = "0.1.0"
edition = "2021"
authors = ["Dima Lazarev <dmitry.lazarev@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
aoc-parse = "0.2.11"
num-rational = "0.4"
num-traits = "0.2.15"